<resources>
    <string name="app_name">СТРОКИ ПОЗОВНОЇ ДАВНОСТІ ЦКУ</string>
    <string name="textview">TextView</string>
    <string name="main_spd">СТРОКИ ПОЗОВНОЇ ДАВНОСТІ</string>
    <string name="main_spd2">ВІДПОВІДНО ДО ЧИННОГО ЗАКОНОДАВСТВА УКРАЇНИ</string>
    <string name="button_text">ДІЗНАТИСЯ СТРОКИ!</string>
    <string name="hint">ВВЕДІТЬ НОМЕР СТАТТІ</string>
    <string name="backToMain">НА ГОЛОВНУ</string>
    <string name="NamePart1" formatted="true">Схоже, що ваша ціль це: %1$s</string>
    <string name="BasisTermsNote">Відповідно до статті %1$s ЦК України строк позивної давності становить %2$s рік(и). Додаткова інформація: %3$s.</string>
</resources>